fixed issue of centering horizontal scrolling POIs

--- a/pages/explore/explore.css
+++ b/pages/explore/explore.css
@@ -32,8 +32,6 @@
 .pois-container {
   width: 75vw;
   display: flex;
-  justify-content: center;
-  align-items: center;
 }
 
 .pois {
